--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 nav {
-  -webkit-box-shadow: 5px 5px 18px var(--bs-gray);
-          box-shadow: 5px 5px 18px var(--bs-gray);
+  -webkit-box-shadow: 5px 5px 20px var(--bs-gray);
+          box-shadow: 5px 5px 20px var(--bs-gray);
   z-index: 10;
 }
 
@@ -19,5 +19,26 @@ nav {
   display: -ms-flexbox;
   display: flex;
   gap: 1rem;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.navbar-btn-group .nav-btn {
+  width: 5.5rem;
+  font-weight: 500;
+  border: 3px solid var(--bs-warning);
+  color: var(--text-color);
+}
+
+@media (max-width: 530px) {
+  .navbar-brand img {
+    width: 50px;
+    height: 30px;
+  }
+  .navbar-brand div {
+    font-size: 0.8rem;
+  }
 }
 /*# sourceMappingURL=header.css.map */
