--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -1,5 +1,196 @@
-.main-title {
-  font-size: 3rem;
-  color: var(--bs-warning);
+#main .card__main {
+  border: none;
+}
+
+#main .card__main div {
+  padding: 7rem 2rem;
+}
+
+#main .card__main div .main-title {
+  font-weight: 900;
+  max-width: 26rem;
+  border-radius: 0.5rem;
+  color: var(--main-txt-color);
+  background-color: var(--main-txt-bg);
+  padding: 1rem;
+}
+
+#main .card__main div .card-text {
+  font-size: 1.5rem;
+  font-weight: 500;
+  max-width: 40rem;
+  border-radius: 0.5rem;
+  color: var(--main-txt-color);
+  background-color: var(--main-txt-bg);
+  padding: 1rem;
+}
+
+#main .card__main div .card-btn {
+  text-align: center;
+}
+
+#main .card__main div .card-btn button {
+  color: var(--main-txt-color);
+  font-size: 1.2rem;
+  min-width: 10rem;
+  font-weight: 500;
+}
+
+#main .card__advantage {
+  background-color: transparent;
+  border: none;
+  margin-bottom: 3rem;
+}
+
+#main .card__video {
+  background-color: var(--secondary-color);
+  border: none;
+  padding: 2rem;
+  margin-bottom: 5rem;
+}
+
+#main .card__video h2 {
+  font-weight: 700;
+}
+
+@media (max-width: 1200px) {
+  #main .card__main div {
+    padding: 4rem 1rem;
+  }
+  #main .card__main div .main-title {
+    font-size: 2rem;
+    max-width: 21rem;
+    border-radius: 0.3rem;
+    padding: 0.8rem;
+  }
+  #main .card__main div .card-text {
+    font-size: 1.2rem;
+    max-width: 31rem;
+    border-radius: 0.3rem;
+    padding: 0.8rem;
+  }
+}
+
+@media (max-width: 998px) {
+  #main .card__main div {
+    padding: 2rem 1rem;
+  }
+  #main .card__main div .main-title {
+    font-size: 1.5rem;
+    max-width: 20rem;
+    padding: 0.5rem;
+  }
+  #main .card__main div .card-text {
+    font-size: 1rem;
+    max-width: 26rem;
+    padding: 0.5rem;
+  }
+  #main .card__main div .card-btn button {
+    font-size: 1rem;
+    min-width: 8rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #main .card__main div {
+    padding: 2rem 1rem;
+  }
+  #main .card__main div .main-title {
+    font-weight: 700;
+    font-size: 1.2rem;
+    max-width: 45%;
+    padding: 0.2rem 0.5rem;
+  }
+  #main .card__main div .card-text {
+    font-size: 0.8rem;
+    max-width: 70%;
+    padding: 0.2rem 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+  #main .card__main div .card-btn {
+    padding: 0.5rem;
+  }
+  #main .card__main div .card-btn button {
+    font-size: 0.8rem;
+    min-width: 7rem;
+  }
+}
+
+@media (max-width: 530px) {
+  #main .card__main div {
+    padding: 1rem 1rem;
+    text-align: center;
+  }
+  #main .card__main div .main-title {
+    max-width: 85%;
+    margin: 0 auto 0.5rem auto;
+  }
+  #main .card__main div .card-text {
+    max-width: 85%;
+    margin: 0 auto;
+  }
+  #main .card__main div .main__text {
+    display: none;
+  }
+  #main .card__main div .card-btn {
+    padding: 0.3rem;
+  }
+}
+
+.team-boxed h2 {
+  font-weight: 700;
+}
+
+.team-boxed .item {
+  text-align: center;
+}
+
+.team-boxed .item .box {
+  text-align: center;
+  padding: 30px;
+  background-color: var(--secondary-color);
+  margin-bottom: 30px;
+  border-radius: 0.3rem;
+}
+
+.team-boxed .item .name {
+  font-weight: bold;
+  margin-top: 28px;
+  margin-bottom: 8px;
+  color: inherit;
+}
+
+.team-boxed .item .title {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #d0d0d0;
+  letter-spacing: 2px;
+  font-size: 13px;
+}
+
+.team-boxed .item .description {
+  font-size: 15px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+.team-boxed .item img {
+  max-width: 160px;
+}
+
+.team-boxed .social {
+  font-size: 18px;
+  color: var(--bs-gray);
+}
+
+.team-boxed .social a {
+  color: inherit;
+  margin: 0 10px;
+  display: inline-block;
+  opacity: 0.7;
+}
+
+.team-boxed .social a:hover {
+  opacity: 1;
 }
 /*# sourceMappingURL=main.css.map */
