--- a/src/pages/textBook/textBook.scss
+++ b/src/pages/textBook/textBook.scss
@@ -34,18 +34,33 @@ nav {
 .word-card {
   display: flex;
   justify-content: space-between;
-  gap: 1rem;
+  // gap: 1rem;
   margin-top: 1rem;
   box-shadow: 5px 5px 18px var(--bs-gray);
   border-radius: 30px;
 }
 
+.word-card_img-wrapper {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 320px;
+  width: 320px;
+  overflow: hidden;
+  border-radius: 30px 0 0 30px;
+}
+
+.word-card_img {
+  height: 100%;
+}
+
 .word-card_visual-content-wrapper {
   display: flex;
+  width: 90%;
 }
 
 .word-card_information-wrapper {
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .word-card_audio-content-wrapper {
